Remove datafx dependency

--- a/demo/src/main/resources/fxml/SideMenu.fxml
+++ b/demo/src/main/resources/fxml/SideMenu.fxml
@@ -4,11 +4,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.StackPane?>
 <?import java.lang.String?>
-<StackPane fx:id="root" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<StackPane fx:id="root" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="demos.gui.sidemenu.SideMenuController">
     <styleClass>
         <String fx:value="side-menu"/>
     </styleClass>
-    <JFXListView fx:id="sideList">
+    <JFXListView fx:id="sideList" onMouseClicked="#loadComponent">
         <Label fx:id="button">Buttons</Label>
         <Label fx:id="checkbox">Check Box</Label>
         <Label fx:id="combobox">Combo Box</Label>
