--- a/demo/src/main/resources/fxml/ui/Button.fxml
+++ b/demo/src/main/resources/fxml/ui/Button.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
 <StackPane fx:id="root" xmlns:fx="http://javafx.com/fxml/1"
-           xmlns="http://javafx.com/javafx/2.2">
+           xmlns="http://javafx.com/javafx/2.2" fx:controller="demos.gui.uicomponents.ButtonController" >
     <VBox maxWidth="400" maxHeight="400" spacing="10">
         <Label styleClass="title-label">Flat Buttons</Label>
         <HBox spacing="20" style="-fx-padding: 0 0 0 50;">
