--- a/demo/src/main/resources/fxml/ui/ChipView.fxml
+++ b/demo/src/main/resources/fxml/ui/ChipView.fxml
@@ -4,7 +4,7 @@
 <?import com.jfoenix.controls.JFXChipView?>
 
 <StackPane fx:id="root" xmlns:fx="http://javafx.com/fxml/1"
-           xmlns="http://javafx.com/javafx/2.2">
+           xmlns="http://javafx.com/javafx/2.2" fx:controller="demos.gui.uicomponents.ChipViewController">
     <StackPane maxWidth="400" maxHeight="400" >
         <JFXChipView fx:id="chipView"></JFXChipView>
     </StackPane>
