--- a/demo/src/main/resources/fxml/Main.fxml
+++ b/demo/src/main/resources/fxml/Main.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import java.lang.String?>
 <StackPane fx:id="root" xmlns:fx="http://javafx.com/fxml/1"
-           xmlns="http://javafx.com/javafx/2.2">
+           xmlns="http://javafx.com/javafx/2.2" fx:controller="demos.gui.main.MainController">
     <!-- Header -->
     <BorderPane>
         <top>
