--- a/demo/src/main/resources/fxml/ui/Checkbox.fxml
+++ b/demo/src/main/resources/fxml/ui/Checkbox.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <StackPane fx:id="root" xmlns:fx="http://javafx.com/fxml/1"
-           xmlns="http://javafx.com/javafx/2.2">
+           xmlns="http://javafx.com/javafx/2.2" fx:controller="demos.gui.uicomponents.CheckboxController">
     <HBox spacing="100" maxWidth="400" maxHeight="300">
         <VBox spacing="20">
             <children>
