--- a/demo/src/main/resources/fxml/ui/Dialog.fxml
+++ b/demo/src/main/resources/fxml/ui/Dialog.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
 <StackPane fx:id="root" xmlns:fx="http://javafx.com/fxml/1"
-           xmlns="http://javafx.com/javafx/2.2">
+           xmlns="http://javafx.com/javafx/2.2" fx:controller="demos.gui.uicomponents.DialogController">
     <VBox spacing="20" alignment="CENTER" maxWidth="400" maxHeight="300">
         <JFXButton fx:id="centerButton" prefWidth="220" prefHeight="30"
                    styleClass="dialog-trigger">CENTER
