--- a/demo/src/main/resources/fxml/ui/Highlighter.fxml
+++ b/demo/src/main/resources/fxml/ui/Highlighter.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <StackPane fx:id="root" xmlns:fx="http://javafx.com/fxml/1"
-           xmlns="http://javafx.com/javafx/2.2">
+           xmlns="http://javafx.com/javafx/2.2" fx:controller="demos.gui.uicomponents.HighlighterController">
     <VBox maxWidth="400" maxHeight="300" spacing="20" alignment="CENTER">
         <children>
             <JFXTextField fx:id="searchField" promptText="Search for..."
