--- a/demo/src/main/resources/fxml/ui/Icons.fxml
+++ b/demo/src/main/resources/fxml/ui/Icons.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.*?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 <StackPane fx:id="root" xmlns:fx="http://javafx.com/fxml/1"
-           xmlns="http://javafx.com/javafx/2.2">
+           xmlns="http://javafx.com/javafx/2.2" fx:controller="demos.gui.uicomponents.IconsController">
     <VBox maxWidth="400" maxHeight="400">
         <Label styleClass="title-label">Font Awesome Icons</Label>
         <HBox spacing="20" style="-fx-padding: 0 0 0 50;">
