--- a/demo/src/main/resources/fxml/ui/ListView.fxml
+++ b/demo/src/main/resources/fxml/ui/ListView.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <StackPane fx:id="root" xmlns:fx="http://javafx.com/fxml/1"
-           xmlns="http://javafx.com/javafx/2.2">
+           xmlns="http://javafx.com/javafx/2.2" fx:controller="demos.gui.uicomponents.ListViewController">
 
     <AnchorPane maxWidth="500">
         <JFXListView fx:id="list1" styleClass="custom-jfx-list-view"
