--- a/demo/src/main/resources/fxml/ui/Masonry.fxml
+++ b/demo/src/main/resources/fxml/ui/Masonry.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.geometry.Insets?>
 <StackPane fx:id="root" xmlns:fx="http://javafx.com/fxml/1"
-           xmlns="http://javafx.com/javafx/2.2">
+           xmlns="http://javafx.com/javafx/2.2" fx:controller="demos.gui.uicomponents.MasonryPaneController">
     <ScrollPane fitToWidth="true" fx:id="scrollPane" hbarPolicy="NEVER">
         <JFXMasonryPane fx:id="masonryPane" HSpacing="10" VSpacing="10">
             <padding><Insets top="16" right="16" bottom="16" left="16"/></padding>
