--- a/demo/src/main/resources/fxml/ui/ScrollPane.fxml
+++ b/demo/src/main/resources/fxml/ui/ScrollPane.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
 <StackPane fx:id="root" xmlns:fx="http://javafx.com/fxml/1"
-           xmlns="http://javafx.com/javafx/2.2">
+           xmlns="http://javafx.com/javafx/2.2" fx:controller="demos.gui.uicomponents.ScrollPaneController">
     <JFXScrollPane fx:id="scroll">
         <topBar>
             <children>
