--- a/demo/src/main/resources/fxml/ui/Combobox.fxml
+++ b/demo/src/main/resources/fxml/ui/Combobox.fxml
@@ -11,7 +11,7 @@
     <HBox spacing="100" maxWidth="500" maxHeight="300" alignment="BASELINE_CENTER">
         <VBox spacing="20">
             <Label styleClass="title-label">Combo Box</Label>
-            <JFXComboBox id="jfxComboBox" prefWidth="200"
+            <JFXComboBox fx:id="jfxComboBox" prefWidth="200"
                          promptText="Select Item">
                 <items>
                     <FXCollections fx:factory="observableArrayList">
@@ -73,7 +73,7 @@
 
         <VBox spacing="20">
             <Label styleClass="title-label">Editable Box</Label>
-            <JFXComboBox id="jfxEditableComboBox" editable="true"
+            <JFXComboBox fx:id="jfxEditableComboBox" editable="true"
                          prefWidth="200" promptText="Select/Edit Items">
                 <items>
                     <FXCollections fx:factory="observableArrayList">
