--- a/demo/src/main/resources/fxml/ui/TextField.fxml
+++ b/demo/src/main/resources/fxml/ui/TextField.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 <StackPane fx:id="root" xmlns:fx="http://javafx.com/fxml/1"
-           xmlns="http://javafx.com/javafx/2.2">
+           xmlns="http://javafx.com/javafx/2.2" fx:controller="demos.gui.uicomponents.TextFieldController">
 
     <VBox prefWidth="300" spacing="40" maxWidth="400" alignment="CENTER">
         <children>
@@ -14,14 +14,14 @@
             </JFXTextField>
             <JFXTextField promptText="Im disabled" disable="true">
             </JFXTextField>
-            <JFXTextField id="validatedText" promptText="With validation">
+            <JFXTextField fx:id="validatedText" promptText="With validation">
                 <validators>
                     <RequiredFieldValidator message="Input Required!">
                         <FontIcon iconLiteral="fas-exclamation-triangle"/>
                     </RequiredFieldValidator>
                 </validators>
             </JFXTextField>
-            <JFXPasswordField id="validatedPassword" promptText="Password"
+            <JFXPasswordField fx:id="validatedPassword" promptText="Password"
                               labelFloat="true">
                 <validators>
                     <RequiredFieldValidator message="Input Required!">
@@ -29,7 +29,7 @@
                     </RequiredFieldValidator>
                 </validators>
             </JFXPasswordField>
-            <JFXTextArea id="jfxTextArea" promptText="What do you think of JFoenix?"
+            <JFXTextArea fx:id="jfxTextArea" promptText="What do you think of JFoenix?"
                          labelFloat="true" maxWidth="300" minHeight="200">
                 <validators>
                     <RequiredFieldValidator message="We would love to get your feedback.">
