--- a/demo/src/main/resources/fxml/ui/ToggleButton.fxml
+++ b/demo/src/main/resources/fxml/ui/ToggleButton.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 <StackPane fx:id="root" xmlns:fx="http://javafx.com/fxml/1"
-           xmlns="http://javafx.com/javafx/2.2">
+           xmlns="http://javafx.com/javafx/2.2" fx:controller="demos.gui.uicomponents.ToggleButtonController">
 
     <VBox prefWidth="300" spacing="50" maxWidth="400" maxHeight="300">
         <Label styleClass="title-label">Toggle Buttons</Label>
