--- a/demo/src/main/resources/fxml/ui/TreeTableView.fxml
+++ b/demo/src/main/resources/fxml/ui/TreeTableView.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
 <StackPane fx:id="root" xmlns:fx="http://javafx.com/fxml/1"
-           xmlns="http://javafx.com/javafx/2.2">
+           xmlns="http://javafx.com/javafx/2.2" fx:controller="demos.gui.uicomponents.TreeTableViewController">
     <VBox maxWidth="600" maxHeight="600" spacing="10">
         <children>
             <HBox alignment="CENTER">
