--- a/demo/src/main/resources/fxml/ui/NodesList.fxml
+++ b/demo/src/main/resources/fxml/ui/NodesList.fxml
@@ -4,7 +4,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.StackPane?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
-<StackPane stylesheets="@/css/jfoenix-components.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
+<StackPane stylesheets="@../../css/jfoenix-components.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
            fx:controller="demos.gui.uicomponents.NodesListController">
     <children>
         <JFXNodesList fx:id="nodesList" rotate="180.0" spacing="15"
